--- a/StickyNavbar/index.html
+++ b/StickyNavbar/index.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>StickyNavbar</title>
+</head>
+<body>
+    <div class="navbar">
+        <a href="index.html"><img src="download.svg" alt="logo"></a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    <div class="top-container">
+        <h1>Welcome to my website</h1>
+    </div>
+    <div class="bottom-container">
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus animi facilis officia a voluptate quisquam in nemo nulla incidunt! Placeat, inventore hic et laboriosam blanditiis aspernatur qui accusantium voluptas illo labore eius rerum eos velit aliquid ratione harum, nisi adipisci alias facilis ad a tenetur! Consequuntur excepturi quo dicta sapiente nihil vitae iure consectetur sequi! Veniam modi numquam enim ratione vel libero voluptatibus ipsam molestias excepturi unde maiores adipisci officiis autem dignissimos, corrupti fugiat amet rerum aspernatur esse ut. Autem, ratione impedit repellat ex quibusdam earum aperiam, iste tenetur alias rerum vel quisquam? Iusto tenetur veritatis officia fugiat ipsa recusandae expedita eveniet nulla architecto consequuntur, minus, error molestiae perferendis. In quia molestias praesentium distinctio non et saepe? Odit incidunt beatae itaque veniam praesentium optio esse enim maxime exercitationem doloremque. Quae molestiae sed dignissimos eos tenetur voluptates officiis quisquam eaque ipsum. Officia reiciendis voluptate excepturi? Culpa quaerat dolore doloribus quam cumque?
+        </p>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente exercitationem architecto enim aut facilis at beatae iure delectus. Dolorem quidem blanditiis possimus sint alias sequi quos praesentium consequuntur suscipit exercitationem esse, dignissimos animi rem perspiciatis nobis natus provident ipsa debitis optio quo amet quasi ea. Cum maxime asperiores expedita fugit eius. Blanditiis dignissimos amet, ut modi id delectus possimus ab recusandae culpa accusamus sapiente sit? Iste nisi molestias, iure dolores, repellat est recusandae eligendi, non inventore velit laborum quas nostrum vero. Quae quo est magni iure numquam praesentium aliquam consequatur rem culpa, ab totam fugit consectetur dolor qui laborum error minus itaque eligendi perspiciatis voluptatibus? Nemo deserunt nesciunt ab cupiditate atque illo doloremque praesentium nam officiis sit ipsum perferendis aspernatur facilis expedita minus itaque adipisci, ducimus vel, eius rem? Voluptate, adipisci qui cumque consectetur ipsum reprehenderit tenetur alias eius excepturi, officiis quibusdam fuga suscipit sapiente pariatur? Rem eius distinctio quisquam?
+        </p>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id incidunt amet atque sed inventore magni assumenda expedita, sapiente nihil. Laboriosam, repudiandae? Aut ut aliquam unde vel officia consequuntur. Dolore quod nostrum suscipit dignissimos dolor. Nostrum repellat id rem. Maxime delectus magnam rerum ea consequuntur deleniti repudiandae voluptate praesentium, voluptates culpa natus in reprehenderit assumenda velit, quidem molestias, molestiae temporibus veniam maiores nemo laudantium excepturi neque esse beatae. Perferendis voluptatibus quis architecto vitae odio itaque omnis ullam, voluptate numquam quod, ipsa adipisci magnam nesciunt doloribus natus asperiores atque. Minus delectus, illo, nam quis error dolorum inventore voluptates dolorem in natus hic suscipit, expedita sit. Labore dicta iusto aspernatur aperiam dolorem repellat tempora. Sint minima expedita, eius dolorum, quae molestias dolorem corrupti aut doloribus odit qui voluptas ducimus animi dolores optio nesciunt? Sit porro, itaque voluptas in minima earum quaerat, harum fugiat ut excepturi eos cupiditate et placeat. Enim dolore aliquid obcaecati!
+        </p>
+        <p class="text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto voluptate, omnis quis quisquam, fugit odio expedita excepturi, praesentium corrupti dolorem animi. Sint, suscipit? Modi rem repellendus veniam facere illum sunt in aliquam eligendi ipsa a aut accusantium ab, ad molestiae. Nisi aliquam excepturi, culpa accusantium perferendis ullam quibusdam omnis placeat laborum error natus incidunt maiores, aperiam est modi velit et voluptas recusandae ut rerum repellendus amet! Dicta earum explicabo ipsum reiciendis eligendi quisquam temporibus, facilis sunt. Delectus aut ullam quae reiciendis exercitationem, libero provident possimus neque dolorum? Vel sequi consequatur unde facilis odit, hic recusandae quo officiis temporibus similique reprehenderit velit quisquam error praesentium impedit ut dignissimos laborum perferendis commodi officia molestias quaerat! In officiis consectetur atque sequi, rerum obcaecati tempore, cumque quis, quasi asperiores dolorem quod non cupiditate delectus expedita error suscipit sunt. Accusantium ullam qui voluptatibus aliquam veniam accusamus consequatur, sit autem corporis iure nulla sed. Nisi, illum!
+        </p>
+        <p class="text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium corrupti voluptas architecto? Ullam minus dolor ad perferendis odio dolore consequuntur officia totam accusantium obcaecati accusamus similique iste maiores voluptatum suscipit non repellendus, placeat recusandae omnis alias libero corrupti numquam eligendi? Animi dicta consequuntur ipsam autem minima sint quae perspiciatis. Nobis assumenda, ipsa consectetur facere, minima incidunt id nam nostrum nihil placeat cumque rem laboriosam, odio vitae? Voluptate hic quam dolorem aliquam autem laboriosam neque excepturi modi. Eligendi aperiam obcaecati perferendis praesentium in eius libero ratione facilis, reiciendis et expedita eos soluta perspiciatis, quas, error incidunt possimus dolore! Dolore, tempore a alias eveniet ipsam magnam, eos debitis soluta illo quidem dignissimos atque saepe quaerat corporis illum enim obcaecati deserunt minus placeat cupiditate optio, recusandae ipsa? Laborum, vitae. Odio fugit natus fuga quisquam nihil voluptatibus quasi nesciunt iusto, fugiat ducimus eius ab facilis doloremque corrupti, maxime aut mollitia quas ullam amet architecto?
+        </p>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, rem distinctio minus neque nihil, a et porro cumque dolores molestiae in blanditiis soluta reprehenderit mollitia veritatis sequi dicta illo nisi laudantium, quae velit delectus necessitatibus. Facere, veritatis! Fugiat aspernatur ducimus provident ipsam reprehenderit molestiae repellat! Hic amet deleniti totam error magnam aut? Possimus, libero ab. Quos totam, eos, nostrum facere dolor, rem atque minus beatae repellendus quis laudantium perferendis fuga reprehenderit repellat magni nemo in quo distinctio accusantium quae placeat hic veniam minima. Ad quae, non consectetur dolorum voluptatum reprehenderit eaque mollitia enim totam doloremque nulla et magni quibusdam commodi aperiam a exercitationem harum deserunt perferendis tempora omnis atque laudantium consequatur ratione. Delectus, ipsum est ipsa minima libero qui esse praesentium error. Dolor, officiis sed. Perspiciatis, ab nemo? Nisi impedit corporis amet, autem voluptatibus a minus accusamus. Voluptas dolores maiores maxime et itaque illo nobis sunt numquam porro inventore id placeat ducimus ullam nostrum magni harum facere vero, ratione, cupiditate eum suscipit culpa facilis? Omnis veritatis quisquam fuga enim impedit, cum excepturi repudiandae saepe laboriosam maxime fugiat temporibus facilis magni ullam possimus itaque nemo harum quaerat pariatur eligendi! Aut quasi qui quidem fugiat dolores nihil, necessitatibus quis suscipit perferendis adipisci.</p>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
